Narrower tooltips to prevent off screen

--- a/src/output/styles/styles.css
+++ b/src/output/styles/styles.css
@@ -315,7 +315,7 @@ header {
 /* Most properties taken from Calendar */
 .tooltip .tooltiptextleft, .tooltip .tooltiptextright {
     visibility: hidden;
-    width: 46vw;
+    width: 40vw;
     max-width: 900px;
     padding: 0px 10px;
     background-color: #EEEEEE;
